# water-management-pilot

./: .gitattributes  .gitignore  README.md  RF_RSM.ipynb  deploy.sh  docker-compose.yml  package-lock.json  pump_decision.ipynb  tif_data.py
ahrc_webapp/: docker-compose.prod.yml  docker-compose.yml
ahrc_webapp/backend/: Dockerfile  app.py  requirements.txt
ahrc_webapp/backend/cervic_cancer/: Dockerfile  app_cervic.py
ahrc_webapp/backend/chemo/: Dockerfile  app_chemo.py
ahrc_webapp/backend/chemo/project_pages/: patient_id.py  utils.py
ahrc_webapp/backend/irrigation/: README.md  app.py  p table.xlsx  pyproject.toml  requirements.txt  sata_data_download.py
ahrc_webapp/backend/oct/: app.py  requirements.txt
ahrc_webapp/data/: irrigation_records.json
ahrc_webapp/frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  pnpm-lock.yaml
ahrc_webapp/frontend/app/: types.ts
ahrc_webapp/frontend/app/Project_1/: actions.ts  page.tsx
ahrc_webapp/frontend/app/Project_2/: page.tsx
ahrc_webapp/frontend/app/cervical/: actions.tsx
backend/cervic_cancer/: requirements.txt
backend/chemo/: requirements.txt
backend/chemo/project_pages/: dataMode.py  dataprocessMode.py  specific_options.py
backend/irrigation/: Dockerfile  Lat_long_SM_RZSM.xlsx  app.py  rf_rzsm_model.pkl
backend/oct/: Dockerfile
data/irrigation/: irrigation_records.json
frontend/app/: layout.tsx  page.tsx  types.ts
frontend/app/cervical/: page.tsx
frontend/app/chemo/: actions.ts
frontend/app/oct/: page.tsx
frontend/app/ui/: fonts.tsx
(+10 files in other folders)
