[project]
name = "irrigation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "affine>=2.4.0",
    "attrs>=25.3.0",
    "certifi>=2025.4.26",
    "click>=8.2.0",
    "click-plugins>=1.1.1",
    "cligj>=0.7.2",
    "et-xmlfile>=2.0.0",
    "fastapi>=0.115.12",
    "h5py>=3.13.0",
    "importlib-metadata>=8.7.0",
    "joblib>=1.5.0",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "rasterio>=1.4.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "six>=1.17.0",
    "snuggs>=1.4.7",
    "threadpoolctl>=3.6.0",
    "tzdata>=2025.2",
    "uvicorn>=0.34.2",
    "zipp>=3.21.0",
]
